added shopping cart, profile and sign in/up sections to navbar

--- a/frontend/public/assets/css/bootstrap.css
+++ b/frontend/public/assets/css/bootstrap.css
@@ -10036,6 +10036,7 @@ a.text-gray-light:hover, a.text-gray-light:focus {
 
 .text-muted {
   color: #969696 !important;
+  size: ;
 }
 
 .text-black-50 {
