--- a/frontend/public/assets/css/ui.css
+++ b/frontend/public/assets/css/ui.css
@@ -447,7 +447,8 @@ p:last-child {
   position: relative;
 }
 .widget-header a {
-  color: #343a40;
+  /*color: #343a40;*/
+  color: white;
 }
 .widget-header a:hover {
   color: #3167eb;
